--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -14,8 +16,9 @@
     "express": "^4.19.2",
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
-    "mongoose": "^8.3.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "mongoose": "^8.3.4",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   }
+  
 }
